# botocove

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  app.py  async_all.py  cove_clifuncs.py  demo.py  ex.py  install-poetry.py  main.py  mypy.ini  profile_cove  profiling.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  lint.yml  publish.yml  test.yml
botocove/: __init__.py  __main__.py  cli.py  cove.py  cove_decorator.py  cove_host_account.py  cove_runner.py  cove_session.py  cove_sessions.py  cove_types.py  decorator.py  host_account.py  runner.py  session.py
missing_region_memory_leak_demo/: README.md  leak_demo.py  make_chart  make_chart_with_region_missing  make_chart_with_region_present
missing_region_memory_leak_demo/sample/: region_missing_20220611481836_output.txt  region_present_20220611501856_output.txt
tests/: conftest.py  test_assuming_session.py  test_decorator.py  test_decorator_no_args.py  test_exceptions.py  test_new.py  test_org_master_deprecation.py  test_regions.py  test_session.py  test_target_ids.py
tests/moto_mock_org/: moto_models.py  test_moto.py
tests/moto_mock_org/test_botocove/: test_botocove.py
tests/moto_mock_org/test_host_account/: test_regions.py  test_resolve_targets.py
