[tool.poetry]
name = "botocove"
version = "1.3.1"
description = "A decorator to allow running a function against all AWS accounts in an organization"
authors = ["Dave Connell <daveconn41@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/connelldave/botocove"
keywords = ["AWS", "organizations", "AWS organizations", "boto3"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.12"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-mock = "^3.3.1"
isort = "^5.6.4"
flakehell = "^0.7.0"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.0"
flake8-eradicate = "^1.0.0"
flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.3.0"
pep8-naming = "^0.11.1"
flake8-print = "^3.1.4"
mypy = "^0.790"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[tool.flakehell]
exclude = ["README.rst", "README.md", ".git","__pycache__",".venv"]
format = "colored"
max_line_length = 88
show_source = true

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["+*", "-S322", "-S101"]



[tool.black]
line_length=88

[tool.pytest.ini_options]
addopts = "-vv"
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = [
    "tests",
]